Added mongoDB usage
