# src/controller/collector/collector_controller.go
@@ -3,6 +3,7 @@ package collector
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/vadym-vasilyev/collector-go/src/domain/app_record"
+	"github.com/vadym-vasilyev/collector-go/src/services"
 	"github.com/vadym-vasilyev/collector-go/src/utils/logger"
 	"github.com/vadym-vasilyev/collector-go/src/utils/rest_errors"
 	"net/http"
@@ -30,11 +31,34 @@ func Collect(c *gin.Context) {
 		c.JSON(restErr.Status(), restErr)
 		return
 	}
-	/*
-		if _, saveErr := services.CollectorService.Save(&recordsBatch); saveErr != nil {
-			c.JSON(saveErr.Status(), saveErr)
-			return
-		}
-	*/
+
+	if saveErr := services.CollectorService.Save(&recordsBatch); saveErr != nil {
+		c.JSON(saveErr.Status(), saveErr)
+		return
+	}
+
 	c.Status(http.StatusAccepted)
+}
+
+// Collect godoc
+// @Summary Get batch records by app token and session id
+// @Description get record by app token and session id
+// @Tags collect
+// @Accept  json
+// @Produce  json
+// @Param app_token path string true "Application token"
+// @Param session_id query string true "Session id"
+// @Success 200
+// @Failure 400 {object} rest_errors.RestErrStruct
+// @Failure 404 {object} rest_errors.RestErrStruct
+// @Failure 500 {object} rest_errors.RestErrStruct
+// @Router /collect/{app_token} [get]
+func Get(c *gin.Context) {
+	sessionId := c.Query("session_id")
+	appToken := c.GetString("app_token")
+	if recordsBatch, restErr := services.CollectorService.Get(appToken, sessionId); restErr != nil {
+		c.JSON(restErr.Status(), restErr)
+	} else {
+		c.JSON(http.StatusOK, recordsBatch)
+	}
 }
